tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/multi-cr.stderr
TOML parse error at line 1, column 21
  |
1 | multi-cr   = """null
"""
  |                     ^
invalid multiline basic string
